# gpurt

./: CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
backends/pal/: CMakeLists.txt  gpurtPalBackend.cpp  gpurtPalBackend.h  gpurtPalBridge.cpp
cmake/: CMakeLists.txt  GpuRtGenerateShaders.cmake  GpurtOptionsCodegen.cmake
gpurt/: CMakeLists.txt  gpurt.h  gpurtAccelStruct.h  gpurtBackend.h  gpurtBuildSettings.h  gpurtCounter.h  gpurtDispatch.h  gpurtEventDefs.h  gpurtInlineFuncs.h  gpurtLib.h  gpurtTraceSettings.h
src/: CMakeLists.txt  gpurtBvhBatcher.cpp  gpurtBvhBatcher.h  gpurtBvhBuilder.cpp  gpurtBvhBuilder.h  gpurtBvhBuilderCommon.h  gpurtCpuBvhBuilder.cpp  gpurtCpuBvhBuilder.h  gpurtCpuUtils.h  gpurtDebugMonitor.cpp  gpurtDebugMonitor.h  gpurtDevice.cpp  gpurtInternal.h  gpurtInternalShaderBindings.h  gpurtInternalShaders.cpp  gpurtTraceSource.cpp  gpurtTraceSource.h  options.yaml
src/shaders/: AccelStructTracker.hlsl  BuildBVH.hlsl  BuildBVHPLOC.hlsl  BuildBVHTDTR.hlsl  BuildCommon.hlsl  BuildCommonScratch.hlsl  BuildCommonScratchGlobal.hlsl  BuildFastAgglomerativeLbvh.hlsl  BuildHPLOC.hlsl  BuildPLOC.hlsl  BuildParallel.hlsl  BuildQBVH.hlsl  BuildQBVHCollapseImpl.hlsl  BuildRootSignature.hlsl  BuildSettings.hlsli  BuildSingleThreadGroup.hlsl  BuildTrivialBvh.hlsl  CMakeLists.txt  ClearBuffer.hlsl  Common.hlsl  CompactAS.hlsl  CompactAS1_1.hlsl  CompactAS3_1.hlsl  CompactCommon.hlsl  Continuations1_1.hlsl  Continuations2_0.hlsl  Continuations3_1.hlsl  CopyAS.hlsl  CopyBufferRaw.hlsl  CountTrianglePairsPrefixSum.hlsl  Debug.hlsl  DecodeAS.hlsl  DecodeCommon.hlsl  DeserializeAS.hlsl  EmitAS.hlsl  EncodeCommon.hlsl  EncodeHwBvh3_1.hlsl  EncodeHwBvhCommon.hlsl  EncodeNodes.hlsl  EncodePairedTriangle.hlsl  (+65 more)
src/shaders/DGF/: EncodeDGF.hlsl
src/shaders/RadixSort/: BitHistogram.hlsl  DistributePartSumInt4.hlsl  RadixSortParallel.hlsl  ScanCommon.hlsli  ScanExclusiveInt4.hlsl  ScanExclusiveInt4DLB.hlsl  ScanExclusiveInt4DLBCommon.hlsl  ScanExclusivePartInt4.hlsl  ScatterKeysAndValues.hlsl
src/shaders/SingleThreadGroupBuild/: EncodeHwBvh3_1_SingleTG.hlsl  EncodeHwBvhCounters.hlsl  GroupShared.hlsl  HPLOC.hlsl  LBVH.hlsl  MergeSortLocal.hlsl  PLOC.hlsl  PrimCompress3_1_SingleTG.hlsl  ScratchBuffer.hlsl
src/shadersClean/common/: Bits.hlsli  BoundingBox.hlsl  BoundingBox.hlsli  Common.hlsl  Common.hlsli  Extensions.hlsl  Extensions.hlsli  InstanceDesc.hlsli  LaneGroup.hlsli  Math.hlsl  Math.hlsli  NodePointers.hlsli  ObbCommon.hlsli  PrimitiveStructure.hlsli  ScratchNode.hlsli  SerializeDefs.hlsli  ShaderDefs.hlsli  TempAssert.hlsli
src/shadersClean/common/gfx10/: BoxNode1_0.hlsl  BoxNode1_0.hlsli  InstanceNode1_0.hlsl  InstanceNode1_0.hlsli  ProceduralNode1_0.hlsl  ProceduralNode1_0.hlsli  TriangleNode1_0.hlsl  TriangleNode1_0.hlsli
src/shadersClean/common/gfx12/: HighPrecisionBoxNode.hlsl  HighPrecisionBoxNode.hlsli  QuantizedBVH8BoxNode.hlsli  childInfo.hlsl  childInfo.hlsli  internalNode.hlsli  primitiveNode.hlsli
src/shadersClean/debug/: ClearBuffer.hlsl  Debug.hlsli
src/shadersClean/traversal/: DispatchRaysConstants.hlsli  PrepareShadowSbtForReplay.hlsl  RayPipelineFlags.hlsli  RayQueryCommon.hlsli  RayState.hlsli  RtIp.hlsli  StackCommon.hlsli  Traits.hlsli  TraversalCounter.hlsli  TraversalDefs.hlsli  Vpc.hlsli
src/shared/: accelStruct.h  assert.h  debugBuffer.h  gpurtBuildConstants.h  gpurtShaderConstants.h  hlslTypes.h  math.h  rayTracingDefs.h  scratchNode.h
tools/: CompileRTShaders.py  DebugPreprocessShaders.py  DebugPreprocessShadersInput.txt.in  RTShaders.xml  genOptions.py  strip_whitelist.txt
tools/PALProfiler/: readme.txt  rtTimingReport.py  summarize.py  summarizePerStage.py
